--- a/notebook-upvote-prediction/notebook.ipynb
+++ b/notebook-upvote-prediction/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e8f33c06",
    "metadata": {},
    "outputs": [],
@@ -24,17 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e2267292",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data...\n"
+     ]
+    }
+   ],
    "source": [
     "# ==========================================\n",
     "# 1. CONFIGURATION & DATA LOADING\n",
     "# ==========================================\n",
-    "TRAIN_PATH = \"train.csv\"\n",
-    "TEST_PATH = \"test.csv\"\n",
-    "SUBMISSION_PATH = \"submission.csv\"\n",
+    "TRAIN_PATH = \"data/public/train.csv\"\n",
+    "TEST_PATH = \"data/public/test.csv\"\n",
+    "SUBMISSION_PATH = \"data/public/submission.csv\"\n",
     "\n",
     "# Leakage: Metrics accumulated AFTER publication\n",
     "LEAKAGE_COLS = [\n",
@@ -103,65 +111,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fd4c84de",
+   "metadata": {},
+   "source": [
+    "# 2. FEATURE ENGINEERING"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee87b1c4",
+   "metadata": {},
+   "source": [
+    "## A. Date Features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3430c093",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing text...\n",
+      "Processing tags...\n"
+     ]
+    }
+   ],
    "source": [
-    "# ==========================================\n",
-    "# 2. FEATURE ENGINEERING\n",
-    "# ==========================================\n",
-    "\n",
-    "\n",
-    "# --- A. Date Features ---\n",
     "def process_dates(df):\n",
-    "    # Handle dd/mm/yyyy description vs ISO snippet. dayfirst=True handles the text description correctly.\n",
-    "    # Coerce errors allows the code to proceed even if some dates are malformed.\n",
     "    for col in [\"created_date\", \"last_updated\"]:\n",
     "        if col in df.columns:\n",
-    "            # Convert to datetime\n",
     "            df[col] = pd.to_datetime(df[col], dayfirst=True, errors=\"coerce\")\n",
     "\n",
-    "            # Feature 1: Numerical Timestamp (Days since Epoch)\n",
-    "            # This preserves the linear progression of time better than raw Year/Month\n",
+    "            # Feature 1: Numerical Timestamp\n",
     "            df[f\"{col}_ts\"] = df[col].astype(np.int64) // 10**9 // 86400\n",
     "\n",
-    "            # Feature 2: Day of Week (Cyclical pattern)\n",
+    "            # Feature 2: Day of Week\n",
     "            df[f\"{col}_dow\"] = df[col].dt.dayofweek\n",
-    "\n",
-    "            # Drop original date object\n",
+    "            \n",
     "            df = df.drop(columns=[col])\n",
     "    return df\n",
     "\n",
-    "\n",
     "X = process_dates(X)\n",
-    "X_test = process_dates(X_test)\n",
-    "\n",
-    "# --- B. Interaction Terms ---\n",
-    "# Update Frequency: How often is it updated? (Age / Update Count)\n",
-    "# Add +1 to denominator to avoid division by zero\n",
+    "X_test = process_dates(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2f9268e",
+   "metadata": {},
+   "source": [
+    "## B. Interaction Terms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905126e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if \"days_since_creation\" in X.columns and \"update_count\" in X.columns:\n",
     "    X[\"update_freq\"] = X[\"days_since_creation\"] / (X[\"update_count\"] + 1)\n",
-    "    X_test[\"update_freq\"] = X_test[\"days_since_creation\"] / (X_test[\"update_count\"] + 1)\n",
-    "\n",
-    "# --- C. Text Features (Title) ---\n",
-    "# Use TF-IDF to capture keywords (e.g., \"Tutorial\", \"Guide\", \"Titanic\")\n",
-    "print(\"Processing text...\")\n",
+    "    X_test[\"update_freq\"] = X_test[\"days_since_creation\"] / (X_test[\"update_count\"] + 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cfac0d8",
+   "metadata": {},
+   "source": [
+    "## C. Text Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f73b2b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tfidf = TfidfVectorizer(max_features=100, stop_words=\"english\")\n",
     "title_train = tfidf.fit_transform(X[\"title\"].fillna(\"\"))\n",
     "title_test = tfidf.transform(X_test[\"title\"].fillna(\"\"))\n",
     "\n",
-    "# Create DataFrames for text features\n",
     "title_cols = [f\"title_{i}\" for i in range(title_train.shape[1])]\n",
     "title_train_df = pd.DataFrame(title_train.toarray(), columns=title_cols, index=X.index)\n",
     "title_test_df = pd.DataFrame(title_test.toarray(), columns=title_cols, index=X_test.index)\n",
     "\n",
     "X = X.drop(columns=[\"title\"])\n",
-    "X_test = X_test.drop(columns=[\"title\"])\n",
-    "\n",
-    "\n",
-    "# --- D. Multi-Label Features (Topics & Libraries) ---\n",
+    "X_test = X_test.drop(columns=[\"title\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "478c011b",
+   "metadata": {},
+   "source": [
+    "## D. Multi-Label Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1cfb016",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_multilabel(train, test, col_name, top_n=30):\n",
     "    # 1. Split strings by pipe '|'\n",
     "    train_split = train[col_name].fillna(\"\").astype(str).apply(lambda x: x.split(\"|\") if x else [])\n",
@@ -200,20 +260,30 @@
     "# Topics\n",
     "topics_train, topics_test = process_multilabel(X, X_test, \"all_topics\", top_n=30)\n",
     "X = X.drop(columns=[\"all_topics\"])\n",
-    "X_test = X_test.drop(columns=[\"all_topics\"])\n",
-    "\n",
-    "# --- E. Categorical Encoding ---\n",
-    "# Author Tier is ordinal\n",
+    "X_test = X_test.drop(columns=[\"all_topics\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67d2e166",
+   "metadata": {},
+   "source": [
+    "## E. Categorical Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf5c730d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tier_mapping = {\"Novice\": 0, \"Contributor\": 1, \"Expert\": 2, \"Master\": 3, \"Grandmaster\": 4}\n",
     "X[\"author_tier\"] = X[\"author_tier\"].map(tier_mapping)\n",
     "X_test[\"author_tier\"] = X_test[\"author_tier\"].map(tier_mapping)\n",
-    "\n",
-    "# OneHotEncode others\n",
     "cat_cols = [\"programming_language\", \"primary_topic\"]\n",
-    "# Note: We dropped author_username due to high cardinality/irrelevance in this simplified model\n",
     "ohe = OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False)\n",
     "\n",
-    "# Fill missing categoricals\n",
     "X[cat_cols] = X[cat_cols].fillna(\"Missing\")\n",
     "X_test[cat_cols] = X_test[cat_cols].fillna(\"Missing\")\n",
     "\n",
@@ -225,16 +295,38 @@
     ")\n",
     "\n",
     "X = X.drop(columns=cat_cols)\n",
-    "X_test = X_test.drop(columns=cat_cols)\n",
-    "\n",
-    "# --- F. Numerical Imputation ---\n",
+    "X_test = X_test.drop(columns=cat_cols)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c24156a4",
+   "metadata": {},
+   "source": [
+    "## F. Numerical Imputation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fecb5025",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "imputer = SimpleImputer(strategy=\"median\")\n",
     "X_num = pd.DataFrame(imputer.fit_transform(X), columns=X.columns, index=X.index)\n",
     "X_test_num = pd.DataFrame(imputer.transform(X_test), columns=X_test.columns, index=X_test.index)\n",
     "\n",
-    "# Assemble final dataset\n",
     "X_final = pd.concat([X_num, title_train_df, libs_train, topics_train, ohe_train], axis=1)\n",
     "X_test_final = pd.concat([X_test_num, title_test_df, libs_test, topics_test, ohe_test], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bc66ce1",
+   "metadata": {},
+   "source": [
+    "# 3. MODEL TRAINING"
    ]
   },
   {
@@ -242,20 +334,26 @@
    "execution_count": null,
    "id": "50165a3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting hyperparameter tuning...\n",
+      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n",
+      "Best Log-MAE: 0.9701\n",
+      "Best Params: {'subsample': 1.0, 'n_estimators': 300, 'max_depth': 3, 'learning_rate': 0.05, 'colsample_bytree': 0.8}\n"
+     ]
+    }
+   ],
    "source": [
-    "# ==========================================\n",
-    "# 3. MODEL TRAINING (Hyperparameter Search)\n",
-    "# ==========================================\n",
-    "\n",
     "xgb_reg = xgb.XGBRegressor(\n",
-    "    objective=\"reg:absoluteerror\",  # Optimization for MAE\n",
+    "    objective=\"reg:absoluteerror\",\n",
     "    random_state=42,\n",
     "    n_jobs=-1,\n",
-    "    tree_method=\"hist\",  # Faster training\n",
+    "    tree_method=\"hist\",\n",
     ")\n",
     "\n",
-    "# Search Space\n",
     "param_dist = {\n",
     "    \"n_estimators\": [100, 300, 500],\n",
     "    \"learning_rate\": [0.01, 0.05, 0.1],\n",
@@ -264,7 +362,6 @@
     "    \"colsample_bytree\": [0.7, 0.8, 1.0],\n",
     "}\n",
     "\n",
-    "# Randomized Search\n",
     "search = RandomizedSearchCV(\n",
     "    estimator=xgb_reg,\n",
     "    param_distributions=param_dist,\n",
@@ -281,25 +378,41 @@
     "print(f\"Best Log-MAE: {-search.best_score_:.4f}\")\n",
     "print(f\"Best Params: {search.best_params_}\")\n",
     "\n",
-    "best_model = search.best_estimator_\n",
-    "\n",
-    "# ==========================================\n",
-    "# 4. PREDICTION & SUBMISSION\n",
-    "# ==========================================\n",
-    "\n",
-    "# Predict log(1+y)\n",
+    "best_model = search.best_estimator_\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f0a94b1",
+   "metadata": {},
+   "source": [
+    "# 4. PREDICTION & SUBMISSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c63135a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submission saved to data/public/submission.csv\n"
+     ]
+    }
+   ],
+   "source": [
     "log_preds = best_model.predict(X_test_final)\n",
     "\n",
-    "# Inverse Transform: exp(pred) - 1\n",
     "preds = np.expm1(log_preds)\n",
-    "\n",
-    "# Clip: Upvotes cannot be negative\n",
     "preds = np.maximum(preds, 0)\n",
     "\n",
     "submission = pd.DataFrame({\"content_id\": test_ids, \"upvotes\": preds})\n",
     "\n",
     "submission.to_csv(SUBMISSION_PATH, index=False)\n",
-    "print(f\"Submission saved to {SUBMISSION_PATH}\")\n"
+    "print(f\"Submission saved to {SUBMISSION_PATH}\")"
    ]
   }
  ],
@@ -310,7 +423,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
